will be addingcart

--- a/Views/Product/Dashboard.cshtml
+++ b/Views/Product/Dashboard.cshtml
@@ -16,100 +16,93 @@
 }
 
 
-<h1>Manage Product</h1>
+
+<main class="main">
+    <!-- <div class="dashboard"> -->
+    <div class="form-container">
+        <h1> Manage Product... </h1>
+
+        <p>
+            <button class="btn btn-outline-info"> <a asp-action="Create">Add Product</a></button> || <button class="btn btn-outline-warning"> <a asp-controller="ProductCategory" asp-action="Create">Add New Category</a></button>
+        </p>
+
+        <table class="table table-info col-md-4">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Data.Barcode)
+                    </th>
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.Data.Name)
+                    </th>
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.Data.Quantity)
+                    </th>
+
+                    <th>
+                        @Html.DisplayNameFor(model => model.Data.SellingPrice)
+                    </th>
+
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Data.Barcode)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Data.Name)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Data.Quantity)
+                        </td>
+
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Data.SellingPrice)
+                        </td>
+
+                        <td>
+                            @*<a asp-action="Edit" asp-route-Barcode="@item.Data.Barcode">Edit</a> |*@
+                            <a asp-action="Details" asp-route-Barcode="@item.Data.Barcode">Details</a> |
+                            @*<a asp-action="DeletePreview" asp-route-Barcode="@item.Data.Barcode">Delete</a> |*@
+                            <a asp-controller="Transaction" asp-action="Create" asp-route-Barcode="@item.Data.Barcode">Buy</a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
 
 
-<div class="container1">
-    <div class="box box0">
-        <form >
 
-        </form>
+
     </div>
-    <div class="box box2">
-        <form asp-controller="Product" asp-action="GetByName">
-            <input type="text" placeholder="Search by Name.." name="name">
-            <button type="submit">Search</button>
-        </form>
+
+    <!-- search box  -->
+
+    <div class="search-container-side">
+        <div class="search-container">
+            <form asp-controller="Product" asp-action="GetByName">
+                <input type="text" placeholder="Search by Name.." name="name">
+                <button type="submit">Search</button>
+            </form>
+        </div>
+
+        <div class="search-container">
+            <form asp-action="GetById">
+                <input type="search" placeholder="Barcode.." aria-label="Search" name="barCode">
+                <button type="submit">Search</button>
+            </form>
+        </div>
+
     </div>
 
-    <div class="box box3">
-        <form  asp-action="GetById">
-            <input type="search" placeholder="Barcode.." aria-label="Search" name="barCode">
-            <button type="submit">Search</button>
-        </form>
-    </div>
-
-    @*<div class="box box3">
-        <form asp-controller="Product" asp-action="GetByName">
-            <input type="text" placeholder="Search by Email.." name="email">
-            <button type="submit">Search</button>
-        </form>
-    </div>*@
-
-</div>
 
 
-
-<div class="container">
-
-    <div class="box box1"> side bar </div>
-</div>
-
-
-<p>
-    <button class="btn btn-outline-info"> <a asp-action="Create">Add Product</a></button> || <button class="btn btn-outline-warning"> <a asp-controller="ProductCategory" asp-action="Create">Add New Category</a></button>
-</p>
-
-<table class="table table-info col-md-4">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Data.Barcode)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.Name)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.Quantity)
-            </th>
-
-            <th>
-                @Html.DisplayNameFor(model => model.Data.SellingPrice)
-            </th>
-
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.Barcode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.Quantity)
-                </td>
-
-                <td>
-                    @Html.DisplayFor(modelItem => item.Data.SellingPrice)
-                </td>
-
-                <td>
-                    @*<a asp-action="Edit" asp-route-Barcode="@item.Data.Barcode">Edit</a> |*@
-                    <a asp-action="Details" asp-route-Barcode="@item.Data.Barcode">Details</a> |
-                    @*<a asp-action="DeletePreview" asp-route-Barcode="@item.Data.Barcode">Delete</a> |*@
-                    <a asp-controller="Transaction" asp-action="Create" asp-route-Barcode="@item.Data.Barcode">Buy</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-
+</main>
 
