--- a/Views/SuperAdmin/Index.cshtml
+++ b/Views/SuperAdmin/Index.cshtml
@@ -25,23 +25,23 @@
 
 
         <div id="">
-            <h1>Recent Transactions...</h1>
 
 
-           @* <p>
-                @if (User?.FindFirst(ClaimTypes.NameIdentifier).Value != null)
-                {
-                    <h1>Welcome @User.FindFirst(ClaimTypes.NameIdentifier).Value; </h1>
-                }
-                else
-                {
-                    <h1> Welcome Guest </h1>
-                }
+            @* <p>
+            @if (User?.FindFirst(ClaimTypes.NameIdentifier).Value != null)
+            {
+            <h1>Welcome @User.FindFirst(ClaimTypes.NameIdentifier).Value; </h1>
+            }
+            else
+            {
+            <h1> Welcome Guest </h1>
+            }
             </p>*@
             <h1>
-                Welcome @User.FindFirst(ClaimTypes.NameIdentifier).Value;
+                Welcome @User.FindFirst(ClaimTypes.NameIdentifier).Value ||
+                <span>Recent Transactions...</span>
             </h1>
-          
+
 
             <table class="table table-info">
                 <thead>
