--- a/Views/Transaction/Create.cshtml
+++ b/Views/Transaction/Create.cshtml
@@ -45,8 +45,8 @@
             @Html.LabelFor(x => x.Transaction.Quantity, new {@class = "control-label"})
             @Html.TextBoxFor(x => x.Transaction.Quantity, new {@class = "form-control"})
             @Html.ValidationMessageFor(x => x.Transaction.Quantity,"", new {@class="text-danger"})
-        </div>
-        *@
+        </div>*@
+        
         <div class="form-group">
             @Html.LabelFor(x => x.Transaction.CustomerId, new {@class = "control-label"})
             @Html.TextBoxFor(x => x.Transaction.CustomerId, new {@class = "form-control"})
